<resources>
    <string name="app_name">GEO Creditos</string>
    <string name="hitn_user_name">Nombre de Usuario</string>
    <string name="user_password">Contraseña</string>
    <string name="string_btn_login">Iniciar sesion</string>
    <string name="action_logout">Cerrar Sesion</string>
    <string name="action_about">Acerca de..</string>
    <string name="clientes_list_title_view">CLIENTES POR VISITAR</string>
    <string name="btn_ver_mapa">Ver mapa</string>
    <string name="login_title">INICIAR SESIÓN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="visita_title_fragment">VERIFICACION DE LA VISITA</string>
    <string name="status_verificacion">STATUS</string>
    <string name="status_encontrado">Encontrado</string>
    <string name="status_no_encontrado">No encontrado</string>
    <string name="status_visita_rechazada">Visita rechazada</string>
    <string name="verificar_button">VERIFICAR</string>
    <string name="especificar_razon">ENVIAR RAZON</string>
    <string name="status_visita_abandonada">Visita abandonada</string>
    <string name="title_verificacion_datos">VERIFICACIÓN DE DATOS</string>
    <string name="subtitle_direccion">Buscar dirección</string>
    <string name="btn_obtener_ubicacion">Obtener Ubicación</string>
    <string name="subtitle_datos_sobre_cliente">DATOS SOBRE EL CLIENTE</string>
    <string name="btn_firma">CAPTURAR FIRMA</string>
    <string name="btn_casa">CAPTURAR CASA</string>
    <string name="subtitle_validacion_identidad">VALIDACIÓN DE IDENTIDAD</string>
    <string name="status_validado">Validado</string>
    <string name="status_no_validado">No validado</string>
    <string name="btn_capturar">CAPTURAR Y ENVIAR</string>
    <string name="razon_textfield">Razon...</string>
    <string name="enviar_razon_btn">Enviar Razon</string>
    <string name="razon_status">Especificar Razon</string>
    <string name="text_input_empty_error_login">No deje campos vacios</string>
    <string name="alert_dialog_confirm_login">REINTENTAR</string>
    <string name="alert_login_error">Error de Login</string>
    <string name="label_clietneActivity">Lista de Cliente</string>
    <string name="alert_logout_title">Estado de sesion</string>
    <string name="alert_logout_message">Cerrado de ssion exitoso</string>
    <string name="alert_logout_negative_logout">CERRAR</string>
    <string name="label_verificacionVisitaActivity">Verificacion</string>
    <string name="btn_aceptar_firma">Aceptar</string>
    <string name="btn_reiniciar_firma">Reiniciar</string>
    <string name="tooltip_error_form">Falta por realizar esta accion</string>
    <string name="alert_datos_title">Captura de datos</string>
    <string name="alert_datos_message">¿Desea guardar los datos capturados?</string>
    <string name="alert_datos_positive_btn">GUARDAR</string>
    <string name="alert_datos_negative_btn">CANCELAR</string>
    <string name="alert_datos_faltantes_title">Datos faltantes</string>
    <string name="alert_datos_faltantes_positive_btn">OK</string>
    <string name="place_holder_razon">Razon...</string>
    <string name="bottom_sheet_title">LISTA DE CLIENTES</string>
    <string name="alert_mapa_title_error">Error del Mapa</string>
    <string name="alert_mapa_message_error">Regresa al la pantalla principal y verifica que tengas el GPS encendido</string>
    <string name="alert_mapa_title_visitar">¿Quieres Realizar una visita?</string>
    <string name="alert_mapa_positive_btn">VISITAR</string>
    <string name="alert_verificacion_conx_title_error">Error de Conexion</string>
    <string name="alert_razon_title_error">Campos Vacios</string>
    <string name="alert_razon_mensaje_error">El campo de la rezon esta vacio, este debe ser completado</string>
    <string name="alert_verificacion_conx_mesage_error">Verifique su conexion a Internet o sus datos moviles.</string>
    <string name="alert_verificacion_positive_btn">REINTENTAR</string>
    <string name="alert_logout_intentos_title_error">Limite de intentos</string>
    <string name="alert_logout_intentos_mesage_error">Has alcanzado el limite de intestos permitidos, (5 intentos)</string>
    <string name="rol_placeholder_textview">Rol</string>
    <string name="rol_visitador">VISITADOR</string>
    <string name="fecha_de_sesion_textView">Fecha de sesion</string>
    <string name="action_mi_perfil">Mi Perfil</string>
    <string name="btn_ver_ine">VER INE</string>
    <string name="check_value">CHECK VALUE</string>
    <string name="foto_ine">FOTO_INE</string>
    <string name="image_error">IMAGE_ERROR</string>
    <string name="snack_msg_warning_razon_text_lenght">Ha sobrepasado el valor de caracteres permitido</string>
</resources>