<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilActivity">

    <ImageView
        android:id="@+id/iconUser"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/margin_component_6"
        android:background="@color/primary_color"
        android:src="@drawable/geo_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvNombreUsuarioLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_component_5"
        tools:text="Mi perfil"
        android:textStyle="bold"
        android:textSize="@dimen/title_2"
        android:textAlignment="center"
        android:fontFamily="@font/avenir_next_lt_pro_regular"
        app:layout_constraintTop_toBottomOf="@+id/iconUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvMiPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_component_3"
        android:text="@string/rol_placeholder_textview"
        android:textSize="@dimen/title_1"
        android:textStyle="bold"
        android:textAlignment="center"
        android:fontFamily="@font/avenir_next_lt_pro_regular"
        app:layout_constraintTop_toBottomOf="@id/tvNombreUsuarioLog"
        app:layout_constraintStart_toStartOf="@id/tvNombreUsuarioLog"
        app:layout_constraintEnd_toEndOf="@id/tvNombreUsuarioLog"/>

    <TextView
        android:id="@+id/visitador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_component_1"
        android:text="@string/rol_visitador"
        android:textStyle="bold|italic"
        android:textSize="@dimen/title_1"
        android:textAlignment="center"
        android:fontFamily="@font/avenir_next_lt_pro_regular"
        app:layout_constraintTop_toBottomOf="@+id/tvMiPerfil"
        app:layout_constraintStart_toStartOf="@id/tvMiPerfil"
        app:layout_constraintEnd_toEndOf="@+id/tvMiPerfil"/>

    <TextView
        android:id="@+id/fecha_Sesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_component_3"
        android:text="@string/fecha_de_sesion_textView"
        android:textSize="@dimen/title_1"
        android:textAlignment="center"
        android:fontFamily="@font/avenir_next_lt_pro_regular"
        app:layout_constraintTop_toBottomOf="@+id/visitador"
        app:layout_constraintStart_toStartOf="@id/visitador"
        app:layout_constraintEnd_toEndOf="@id/visitador"/>

    <TextView
        android:id="@+id/tvFechaSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_component_1"
        tools:text="00 / 00 / 0000"
        android:textSize="@dimen/subtitle_2"
        android:textStyle="bold"
        android:textAlignment="center"
        android:fontFamily="@font/avenir_next_lt_pro_regular"
        app:layout_constraintTop_toBottomOf="@+id/fecha_Sesion"
        app:layout_constraintStart_toStartOf="@id/fecha_Sesion"
        app:layout_constraintEnd_toEndOf="@id/fecha_Sesion"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCerrarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_component_6"
        android:text="@string/action_logout"
        app:layout_constraintTop_toBottomOf="@+id/tvFechaSesion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>