<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.VerificarEstatusFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                app:titleTextColor="@color/on_primary_color"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:background="@drawable/unplash2"
            android:layout_height="match_parent">


            <!-- degradado -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/background_verificacion" />
            <!-- degradado -->

            <TextView
                android:id="@+id/tvTituloVerificacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_component_6"
                android:text="@string/visita_title_fragment"
                android:textColor="@color/on_primary_color"
                android:fontFamily="@font/avenir_next_lt_pro_regular"
                android:textSize="@dimen/title_1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvEstatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_component_6"
                android:layout_marginEnd="@dimen/margin_component_6"
                android:layout_marginTop="@dimen/margin_component_6"
                app:layout_constraintTop_toBottomOf="@id/tvTituloVerificacion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status_verificacion"
                        android:textSize="@dimen/subtitle_1"
                        android:fontFamily="@font/avenir_next_lt_pro_regular"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/margin_component_3"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <RadioGroup
                        android:id="@+id/rgEstatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_component_2"
                        android:layout_marginBottom="@dimen/margin_component_5"
                        app:layout_constraintTop_toBottomOf="@+id/tvStatus"
                        app:layout_constraintStart_toStartOf="@id/tvStatus"
                        app:layout_constraintEnd_toEndOf="@id/tvStatus"
                        app:layout_constraintBottom_toBottomOf="parent">

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/rbS_Encontrador"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/avenir_next_lt_pro_regular"
                            android:text="@string/status_encontrado"
                            app:buttonTint="@color/es_encontrado_color"
                            android:shadowColor="@color/es_encontrado_sh_color"
                            tools:checked="true" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/rbS_NoEncontrado"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/status_no_encontrado"
                            android:fontFamily="@font/avenir_next_lt_pro_regular"
                            app:buttonTint="@color/es_no_encontrado_color"
                            android:shadowColor="@color/es_no_encontrado_sh_color" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/rbS_VisitaRechazada"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/status_visita_rechazada"
                            android:fontFamily="@font/avenir_next_lt_pro_regular"
                            app:buttonTint="@color/es_visita_rechazada_color"
                            android:shadowColor="@color/es_visita_rechazada_sh_color" />
                    </RadioGroup>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnVerificar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verificar_button"
                android:fontFamily="@font/avenir_next_lt_pro_regular"
                app:layout_constraintTop_toBottomOf="@id/cvEstatus"
                app:layout_constraintStart_toStartOf="@id/cvEstatus"
                app:layout_constraintEnd_toEndOf="@id/cvEstatus"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>